--- a/scss/common/_form-select2.scss
+++ b/scss/common/_form-select2.scss
@@ -62,6 +62,10 @@
     }
   }
 
+  &.category-chooser.combo-box .combo-box-header {
+    padding: $btn-padding-y $btn-padding-x;
+  }
+
   &.category-drop.combo-box,
   &.combo-box,
   &.dropdown-select-box {
@@ -133,6 +137,10 @@
     &.mini-tag-chooser {
       &.is-expanded {
         border: 0;
+
+        .select-kit-header {
+          border: 0;
+        }
       }
 
       .select-kit-body {
@@ -220,6 +228,11 @@
 
       .filter-input {
         margin-right: $spacer-sm;
+      }
+
+      .spinner {
+        height: ($text-field-height - $text-field-padding-y * 2);
+        width: ($text-field-height - $text-field-padding-y * 2);
       }
     }
 
