--- a/scss/common/_base.scss
+++ b/scss/common/_base.scss
@@ -13,6 +13,8 @@ html {
   box-sizing: border-box;
   font-family: $font-family-sans-serif;
   font-size: initial;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
   line-height: initial;
   text-size-adjust: 100%;
 }
